# chromatic_orchestrator

./: .gitignore  README.md  pyproject.toml  setupenv.sh
notebooks/: chromatic_analysis.ipynb
prompts/: classification_default.txt  scoring_category_a.txt  scoring_category_b.txt  scoring_category_c.txt  scoring_category_d.txt  scoring_category_e.txt  scoring_category_f.txt  scoring_category_g.txt  scoring_category_h.txt  scoring_category_i.txt  scoring_category_j.txt  scoring_category_unknown.txt  summary_category_a.txt  summary_category_b.txt  summary_category_c.txt  summary_category_d.txt  summary_category_e.txt  summary_category_f.txt  summary_category_g.txt  summary_category_h.txt  summary_category_i.txt  summary_category_j.txt  summary_category_unknown.txt
src/chromatic/: __init__.py
src/chromatic/cli/: __init__.py  classify.py  run_pipeline.py  score.py  summarize.py
src/chromatic/pipeline/: __init__.py  orchestrator.py
src/chromatic/utils/: __init__.py  image_loader.py  prompt_config.py  prompt_registry.py
src/chromatic/vision/: __init__.py  classifier.py  llama_vision_runner.py  scorer.py  summarizer.py
